fix flicker and add css

--- a/web/assets/core/css/page-monitoring/monitoring.css
+++ b/web/assets/core/css/page-monitoring/monitoring.css
@@ -446,6 +446,10 @@ h4.content-heading {
 }
 .link-detail:hover{
     cursor: pointer;
+    /*background: #ddd !important;*/
+}
+.fa-project-info:hover, .linked:hover {
+    color: #3c8dbc !important;
 }
 
 .span-legend {
